Remove columns and remove rows

--- a/index.html
+++ b/index.html
@@ -242,6 +242,15 @@
             </template>
         </section>
 
+        <!-- Empty square -->
+        <div
+            class="box-styles"
+            :style="{
+                display: 'grid',
+                gridAreas: 'empty',
+            }">
+        </div>
+
         <!-- Column List -->
         <section
             id="column-list"
