Add contact info, google analytics.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <link rel="stylesheet" href="style.css">
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54223109-6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-54223109-6');
+    </script>
 </head>
 
 <body>
@@ -338,6 +346,18 @@
             >
                 {{ item.text }}
             </div>
+        </section>
+
+        <!-- Contact Information -->
+        <section id="contact-info">
+            <p>
+                <a href="http://github.com/yahmez00/css-grid-playground" target="_blank">GitHub</a>
+            </p>
+
+            <p>
+                designed and developed by
+                <a href="https://twitter.com/yahmez00" target="_blank">@yahmez00</a>
+            </p>
         </section>
     </div>
 
